# pass-rs

./: Cargo.toml  readme.md  todo.md
.github/workflows/: ci.yml
src/: cli.rs  config.rs  dirs.rs  generator.rs  git.rs  key.rs  lib.rs  main.rs  password.rs  secret.rs  store.rs
src/command/: cp.rs  edit.rs  find.rs  generate.rs  git.rs  grep.rs  init.rs  insert.rs  key.rs  ls.rs  mod.rs  mv.rs  rm.rs  show.rs
