[package]
name = "pass"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A cli password storage"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
base64 = "0.22.1"
clap = { version = "4.3.0", features = ["derive"] }
console = "0.15.8"
dirs = "5.0.1"
git2 = "0.18.3"
gpgme = "0.11.0"
once_cell = "1.19.0"
openssl = "0.10.63"
pkcs8 = "0.10.2"
rand = "0.8.5"
rsa = "0.9.6"
serde = { version = "1.0.192", features = ["derive"] }
walkdir = "2.5.0"
